GH-1: Revamped Join Us Section

--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,16 @@ code {
   src: local("Gotham"), url("./font/Gotham\ Light.otf") format("truetype");
   font-style: normal;
 }
+
+@font-face {
+  font-family: "Manrope";
+  src: local("Manrope"), url("./font/Manrope-Regular.ttf") format("truetype");
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Antonio";
+  src: local("Antonio"), url("./font/Antonio-Regular.ttf") format("truetype");
+  font-style: normal;
+}
+
